# feature-homework_10_1

./: .coverage  .gitignore  README.md  conftest.py  pyproject.toml
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html
src/: masks.py  processing.py  widget.py
test/: test_masks.py  test_widget.py
tests/: conftest.py  test_masks.py  test_processing.py  test_widget.py
