[tool.poetry]
name = "my_project_312"
version = "0.1.0"
description = ""
authors = ["Semen"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.34.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
pytest-cov = "^5.0"
flake8 = "^7.0"
black = "^24.0"
mypy = "^1.10"
isort = "^5.13"

[tool.poetry.group.test.dependencies]
pytest = "^9.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true

[tool.flake8]
max-line-length = 119
extend-ignore = ["E203"]
